; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_remote.c_test_refs_branches_remote__local_remote_returns_error.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/branches/extr_remote.c_test_refs_branches_remote__local_remote_returns_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"refs/heads/master\00", align 1
@g_repo = common dso_local global i32 0, align 4
@GIT_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_branches_remote__local_remote_returns_error() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  store i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8** %1, align 8
  %3 = call i32 (...) @git_error_clear()
  %4 = call i32 @memset(i32* %2, i32 0, i32 4)
  %5 = load i32, i32* @g_repo, align 4
  %6 = load i8*, i8** %1, align 8
  %7 = call i32 @git_branch_remote_name(i32* %2, i32 %5, i8* %6)
  %8 = load i32, i32* @GIT_ERROR, align 4
  %9 = call i32 @cl_git_fail_with(i32 %7, i32 %8)
  %10 = call i32* (...) @git_error_last()
  %11 = icmp ne i32* %10, null
  %12 = zext i1 %11 to i32
  %13 = call i32 @cl_assert(i32 %12)
  ret void
}

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @memset(i32*, i32, i32) #1

declare dso_local i32 @cl_git_fail_with(i32, i32) #1

declare dso_local i32 @git_branch_remote_name(i32*, i32, i8*) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32* @git_error_last(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
